tests/ui/diagnostic_namespace/do_not_recommend/as_expression.next.stderr
error[E0277]: the trait bound `&str: AsExpression<Integer>` is not satisfied
  --> $DIR/as_expression.rs:56:21
   |
LL |     SelectInt.check("bar");
   |               ----- ^^^^^ the trait `AsExpression<Integer>` is not implemented for `&str`
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `AsExpression<Integer>` is not implemented for `&str`
           but trait `AsExpression<Text>` is implemented for it
   = help: for that trait implementation, expected `Text`, found `Integer`
note: required by a bound in `Foo::check`
  --> $DIR/as_expression.rs:47:12
   |
LL |     fn check<T>(&self, _: T) -> <T as AsExpression<<Self as Expression>::SqlType>>::Expression
   |        ----- required by a bound in this associated function
LL |     where
LL |         T: AsExpression<Self::SqlType>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Foo::check`

error[E0271]: type mismatch resolving `Integer == Text`
  --> $DIR/as_expression.rs:56:5
   |
LL |     SelectInt.check("bar");
   |     ^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
